rns-lang/test_data/integration/error/parser/outside_class_directive/dot_annotation.rns
.annotation actually can't be here
.class public HelloWorld

.end method